<resources>
    <string name="app_name">FocusTime</string>
    <string name="time_hours_minutes_seconds_formatter" translatable="false">%02d:%02d:%02d</string>
    <string name="time_minutes_seconds_formatter" translatable="false">%02d:%02d</string>
    <string name="time_minutes_formatter" translatable="false">%02d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="main">Main</string>
    <string name="begin_focus">Start focusing</string>
    <string name="settings_pomodoro">Timer settings</string>
    <string name="sound_focus">Sound of focusing session</string>
    <string name="notify">Signal of completed timers</string>
    <string name="work_on_task">Work on task:</string>
    <string name="save">Save</string>
    <string name="change_theme_menu">Change theme</string>
    <string name="backup_copy">Backup copying</string>
    <string name="assess">Assess us</string>
    <string name="mail_dev">Contact the developer</string>
    <string name="c_newtime">NewTime - habits and goals</string>
    <string name="on_boarding_one">Are things going on slowly?</string>
    <string name="on_boarding_two">There are a lot of tasks but it is difficult to concentrate?</string>
    <string name="on_boarding_for">Here you will find a perfect tool for concentration!</string>
    <string name="on_boarding_three">Be productive and quicker!</string>
    <string name="des_task">New task description...</string>
    <string name="new_project">New project</string>
    <string name="today">Today tasks</string>
    <string name="month">Month</string>
    <string name="in_focus">In focus - </string>
    <string name="color">Color</string>
    <string name="date_deadline">Deadline date</string>
    <string name="save_task">Save</string>
    <string name="add_task">Add task</string>
    <string name="name_project">Project name...</string>
    <string name="done">Done</string>
    <string name="task_weiting">Tasks in progress</string>
    <string name="plan_focus">Focusing plan</string>
    <string name="prize_to_complete">Award for completing...</string>
    <string name="design_timer">Timer design</string>
    <string name="time_for_break">Break in minutes</string>
    <string name="time_for_pomodoro">Work in focus in minutes</string>
    <string name="tick_sound">Ticking sound</string>
    <string name="sound_bird">Birds singing</string>
    <string name="sound_fire">Fire sound</string>
    <string name="sound_water">Stream sound</string>
    <string name="no">No</string>
    <string name="date">Choose the date</string>
    <string name="priority_task">Task priority</string>
    <string name="high">High</string>
    <string name="middle">Medium</string>
    <string name="normal">Normal</string>
    <string name="pro">Premium</string>
    <string name="change_theme">Choose theme</string>
    <string name="today_task_empty">You do not have tasks today</string>
    <string name="archive_empty">There is nothing here for a while</string>
    <string name="empty_project">You do not have active projects...</string>
    <string name="active">Active</string>
    <string name="archive">Projects archive</string>
    <string name="cancel">Cancel</string>
    <string name="delete_project">Do you want to delete the project?</string>
    <string name="yes">Yes</string>
    <string name="rubin">Rubin</string>
    <string name="sky">Sky</string>
    <string name="peach">Peach</string>
    <string name="avocado">Avocado</string>
    <string name="add_archive">Do you want to move the project to archive?</string>
    <string name="delete_archive">Do you want to return the project to work?</string>
    <string name="statistic">Statistics</string>
    <string name="premium">Premium</string>
    <string name="pro_motivation">Motivation and development of application</string>
    <string name="pro_statistic">Focusing statistics</string>
    <string name="pro_sygnal">Sounds signal</string>
    <string name="pro_theme">Color design choice</string>
    <string name="pro_settings">More settings for timer</string>
    <string name="pro_data">Backup copying</string>
    <string name="pro_projects">To create more than 3 projects</string>
    <string name="free_7_days">7 days free</string>
    <string name="pause">Pause</string>
    <string name="begin_break">Start break</string>
    <string name="auto_focus_start">Focusing autostart</string>
    <string name="auto_break_start">Break autostart</string>
    <string name="delete_break">Break turn of</string>
    <string name="edit_name_pr">Editing</string>
    <string name="do_deadline">Date of completion </string>
    <string name="without_date">No ads</string>
    <string name="edit_task">Editing</string>
    <string name="desk_task">Task description...</string>
    <string name="tasks_menu">Tasks</string>
    <string name="projects_menu">Projects</string>
    <string name="profile_menu">Profile</string>
    <string name="pomodoro_menu">Pomodoro</string>
    <string name="delete_task">Do you want to delete the task?</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="skip_break">Skip the break</string>
    <string name="prize_et">Награда по завершению...</string>
    <string name="color_ad">Color</string>
    <string name="in_focus_tasks">Focus with tasks -</string>
    <string name="calendar_menu">Calendar</string>
    <string name="violet">Bubuleo</string>
    <string name="pink">Flamingo</string>
    <string name="sea">Sea</string>
    <string name="mail">Email to the Focus Time developer</string>
    <string name="signal_1">Сигнал 1</string>
    <string name="signal_2">Сигнал 2</string>
    <string name="signal_3">Сигнал 3</string>
    <string name="signal_4">Сигнал 4</string>
    <string name="signal_5">Сигнал 5</string>
    <string name="signal_6">Сигнал 6</string>
    <string name="task_empty">There is no tasks on this day...</string>
    <string name="now_in_focus">Is in focus!</string>
    <string name="waiting_focus">Waiting for focusing...</string>
    <string name="now_pause">In pause now!</string>
    <string name="now_break">Break time!</string>
    <string name="weiting_break">Waiting for break...</string>
    <string name="today_r">Today</string>
    <string name="week_r">Week</string>
    <string name="all_time_">All the time</string>
    <string name="focus_in_projects">Focus time in projects - </string>
    <string name="alls">Total time</string>
    <string name="premium_month">Per month - 89 ₽</string>
    <string name="premium_year">Per year - 899 ₽</string>
    <string name="promo_in">Insert the promocode</string>
    <string name="next">Next</string>
    <string name="promocode_completed">Promo code arrived! All application features are open!</string>
    <string name="promocode_not_completed">"Promo code didn't work! Try it again!"</string>
</resources>