<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/light"
    android:background="?light"
    tools:context=".ui.profile.premium.PremiumFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <RelativeLayout
          android:id="@+id/top_ll"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize">

          <androidx.appcompat.widget.AppCompatImageButton
              android:id="@+id/back"
              android:src="@drawable/ic_back_24"
              style="@style/ButtonToolBar" />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/premium"
              android:gravity="center"
              android:textColor="@color/black"
              android:layout_margin="16dp"/>

      </RelativeLayout>

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/promo_in"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:background="@drawable/inline_bg_btn"
          android:textColor="?middle_d"
          android:textAllCaps="false"
          android:text="@string/promo_in"
          android:layout_marginHorizontal="16dp"/>


      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/premium_month"
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:layout_marginTop="8dp"
          android:background="@drawable/btn_bg"
          android:textColor="@color/white"
          android:textAllCaps="false"
          android:text="@string/premium_month"
          android:layout_marginHorizontal="16dp"/>

<!--      <androidx.appcompat.widget.AppCompatButton-->
<!--          android:id="@+id/premium_year"-->
<!--          android:layout_width="match_parent"-->
<!--          android:layout_height="40dp"-->
<!--          android:layout_marginTop="8dp"-->
<!--          android:background="@drawable/btn_bg"-->
<!--          android:textColor="@color/white"-->
<!--          android:textAllCaps="false"-->
<!--          android:text="@string/premium_year"-->
<!--          android:layout_marginHorizontal="16dp"/>-->

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/pro_projects"
          android:gravity="center|start"
          android:drawableStart="@drawable/pro_pick_projects"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/without_date"
          android:gravity="center|start"
          android:drawableStart="@drawable/pro_pick_clear_phone"/>

<!--      <TextView-->
<!--          android:layout_width="match_parent"-->
<!--          android:layout_height="wrap_content"-->
<!--          android:text="@string/pro_data"-->
<!--          android:gravity="center|start"-->
<!--          android:drawableStart="@drawable/pro_pick_data"/>-->

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/pro_settings"
          android:gravity="center|start"
          android:drawableStart="@drawable/pro_pick_settings"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/pro_theme"
          android:gravity="center|start"
          android:drawableStart="@drawable/pro_pick_theme"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/pro_sygnal"
          android:gravity="center|start"
          android:drawableStart="@drawable/pro_pick_notification"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/pro_statistic"
          android:gravity="center|start"
          android:drawableStart="@drawable/pro_pick_statistic"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/pro_motivation"
          android:gravity="center|start"
          android:layout_marginBottom="26dp"
          android:drawableStart="@drawable/pro_pick_motivation"/>

  </LinearLayout>

</ScrollView>