<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.settings.SettingsTimerFragment">


    <RelativeLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settings_timer"
            android:src="@drawable/ic_back_24"
            style="@style/ButtonToolBar" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_pomodoro"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="16dp"/>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginHorizontal="16dp"
        android:text="Время для Помодоро"/>

    <SeekBar
        android:id="@+id/min_focus"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:padding="16dp"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginHorizontal="16dp"
        android:text="Время для Перерыва"/>
    <SeekBar
        android:id="@+id/min_break"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="8dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/design_timer"
        android:drawableEnd="@drawable/ic_right_24"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/sound_focus"
        android:drawableEnd="@drawable/ic_right_24"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/notify"
        android:drawableEnd="@drawable/ic_right_24"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:text="Автоматический старт перерыва"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:text="Автоматический старт фокуса"
        android:layout_height="wrap_content"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:text="@string/save"
        android:layout_marginBottom="26dp"
        android:layout_marginHorizontal="16dp"/>
</LinearLayout>