<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@color/light"
    android:orientation="vertical"
    tools:context=".ui.tasks.edit.EditTaskFragment">


    <RelativeLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            style="@style/ButtonToolBar"
            android:src="@drawable/ic_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_task"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="16dp"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/delete_task"
            style="@style/ButtonToolBar"
            android:layout_toStartOf="@+id/save"
            android:src="@drawable/ic_baseline_delete_24" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/save"
            style="@style/ButtonToolBar"
            android:layout_marginEnd="16dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_done_24" />

    </RelativeLayout>


    <EditText
        android:id="@+id/name_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:gravity="top|start"
        android:padding="8dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="14sp"
        android:hint="@string/desk_task"
        android:lines="3" />

    <TextView
        android:id="@+id/task_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:gravity="start|center"
        android:drawablePadding="6dp"
        android:padding="8dp"
        android:drawableStart="@drawable/ic_arrow_down_24"
        android:layout_marginHorizontal="16dp"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        />

    <TextView
        android:id="@+id/task_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:gravity="start|center"
        android:drawablePadding="9dp"
        android:padding="8dp"
        android:paddingStart="12dp"
        android:drawableStart="@drawable/ic_label"
        android:layout_marginHorizontal="16dp"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:text="@string/priority_task"
        />

</LinearLayout>