<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/sound_focus"
        android:gravity="center"
        android:visibility="gone"
        tools:visibility="visible"
        android:textColor="@color/black"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:visibility="visible"
        android:textSize="14sp"
        tools:text="visible"
        android:visibility="gone"
        android:background="@drawable/bg_middle_l"
        android:layout_marginHorizontal="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/inline_bg_btn"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textAllCaps="false"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/btn_bg"
            />

    </LinearLayout>
</LinearLayout>