<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?light"
    android:orientation="vertical"
    tools:background="@color/light">

    <RelativeLayout
        android:id="@+id/top_ll"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back"
            style="@style/ButtonToolBar"
            android:src="@drawable/ic_back_24" />

        <TextView
            android:id="@+id/deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:gravity="center"
            android:visibility="gone"
            tools:text="Сделать до 23.12, 19:00" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/archive_project"
            style="@style/ButtonToolBar"
            android:layout_toStartOf="@+id/delete_project"
            android:src="@drawable/ic_baseline_archive_24"
            android:tint="?middle_l" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/delete_project"
            style="@style/ButtonToolBar"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_delete_24" />

    </RelativeLayout>


    <TextView
        android:id="@+id/name_project"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/ic_circle"
        android:drawablePadding="6dp"
        android:gravity="top|start"
        android:textSize="14sp"
        tools:text="project name" />

    <TextView
        android:id="@+id/prize_to_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_price"
        android:drawablePadding="2dp"
        android:gravity="start|center"
        tools:text="project price" />

    <LinearLayout
        android:id="@+id/add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:visibility="visible"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-4dp"
                android:layout_weight="0.5"
                android:src="@drawable/ic_label" />

            <TextView
                android:id="@+id/date_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="4dp" />

            <TextView
                android:id="@+id/save_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="3"
                android:gravity="end|center"
                android:text="@string/save_task" />

        </LinearLayout>

        <EditText
            android:id="@+id/name_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white"
            android:gravity="top|start"
            android:hint="@string/des_task"
            android:lines="2"
            android:padding="8dp"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/in_focus"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/count_in_focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/roboto_slab_black"
                android:gravity="center"
                android:text="13:00"
                android:textColor="?middle_l"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/count_tasks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="3/4" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_done_tasks"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="45"
            android:progressBackgroundTint="?middle_l"
            android:progressTint="?middle_l" />
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:nestedScrollingEnabled="false" />

</LinearLayout>